# spectre-tipper

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  nx.json  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/discord_bot/: Cargo.toml  project.json
apps/discord_bot/src/: main.rs
discord_bot/: Cargo.toml
discord_bot/src/: lib.rs  main.rs  models.rs  utils.rs
discord_bot/src/commands/: change_password.rs  claim.rs  close.rs  compound.rs  create.rs  destroy.rs  export.rs  mod.rs  open.rs  restore.rs  send.rs  status.rs  withdraw.rs
libs/core/: Cargo.toml  project.json
libs/core/src/: error.rs  lib.rs  owned_wallet_metadata.rs  tip_context.rs  tip_owned_wallet.rs  tip_transition_wallet.rs  tip_wallet.rs  transition_wallet_metadata.rs  utils.rs
libs/models/: Cargo.toml
libs/models/src/: lib.rs  tip_context.rs
libs/spectre/: Cargo.toml  project.json
libs/spectre/src/: error.rs  lib.rs  tip_wallet.rs
