[package]
name = "discord_bot"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
poise = { version = "0.6.1" }
core = { path = "../libs/core" }
spectre-wrpc-client = { git = "https://github.com/spectre-project/rusty-spectre.git", branch = "main" }
spectre-wallet-core = { git = "https://github.com/spectre-project/rusty-spectre.git", branch = "main" }
spectre-wallet-keys = { git = "https://github.com/spectre-project/rusty-spectre.git", branch = "main" }
workflow-core = { version = "0.18.0" }
futures = "0.3.31"
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features=["env-filter"]}
