[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
spectre-wallet-core = { git = "https://github.com/spectre-project/rusty-spectre.git", branch = "main" }
spectre-wallet-keys = { git = "https://github.com/spectre-project/rusty-spectre.git", branch = "main" }
spectre-wrpc-client = { git = "https://github.com/spectre-project/rusty-spectre.git", branch = "main" }
spectre-consensus-core = { git = "https://github.com/spectre-project/rusty-spectre.git", branch = "main" }

spectre-addresses = { git = "https://github.com/spectre-project/rusty-spectre.git", branch = "main" }
spectre-bip32 = { git = "https://github.com/spectre-project/rusty-spectre.git", branch = "main" }
thiserror = {version = "1.0.64"}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
